<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="itemPriceString">$%1$.2f</string>
    <string-array name="categories">
        <item>Food</item>
        <item>Clothing</item>
        <item>Travel</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="item_description">Item Description</string>
    <string name="purchased">Purchased</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="enter_item_here">Enter item here</string>
    <string name="enter_item_description_here">Enter item description here</string>
    <string name="enter_price_here">Enter price here</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="clothing">Clothing</string>
</resources>