<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etItemTitle"
        android:hint="@string/enter_item_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etItemDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_description_here"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Spinner
            android:id="@+id/spinnerCategories"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/etItemPrice"
            android:hint="@string/enter_price_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="2"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchased" />

</LinearLayout>